Sun Mar  2 12:29:57 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/manconv.c (args_doc, options): Describe argument to -f as
	  "CODE[:...]" rather than "CODE:..." (thanks, Benno Schulenberg).

Sun Mar  2 12:28:40 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (OPTIONS): Reorganise into subsections, with
	  options listed in the same order as in 'man --help' output.
	* src/man.c (options, parse_opt): Rearrange a few options slightly
	  so that the ordering makes more sense.

Sun Mar  2 11:56:48 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1, src/encodings.c, src/encodings.h,
	  src/lexgrog_test.c: Update copyright notices.

Sun Mar  2 11:03:21 GMT 2008  Colin Watson  <cjwatson@debian.org>

	Improve 'man -E' to allow overriding the output encoding explicitly,
	rather than implicitly (and unreliably) by changing the *roff device
	(Debian bug #466396).

	* src/encodings.c (device_table): Add stub entries for troff
	  devices.
	  (is_roff_device): New function.
	* src/encodings.h (is_roff_device): Add prototype.
	* src/man.c (options): Change description of -E to allow general
	  encoding selection.
	  (parse_opt): Only assign the argument of -E to roff_device if it
	  is actually a *roff device; otherwise it is presumed to be a true
	  character encoding and stored in want_encoding. Remove
	  different_encoding, since testing whether want_encoding is set
	  supersedes that.
	  (make_roff_command): If want_encoding is set and is not a *roff
	  device, recode to it rather than to the locale's encoding.
	  (display, try_section, display_filesystem, display_database): Test
	  want_encoding rather than different_encoding.
	* man/man1/man.man1 (OPTIONS): Adjust documentation of -E.
	* docs/NEWS: Document this.

	* src/lexgrog_test.c (options): Bring description of -E into sync
	  with man.

Sat Mar  1 22:14:43 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (get_roff_encoding): In the CJK UTF-8 special