@@ -1,3 +1,9 @@
+Sun Mar  2 12:35:28 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (options), src/manpath.c (options), src/whatis.c
+	  (options): Use a unified description for --systems (thanks, Benno
+	  Schulenberg).
+
 Sun Mar  2 12:29:57 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* src/manconv.c (args_doc, options): Describe argument to -f as
